# LatticeArena

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_LOG.md  PYQUDA_NOTES.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  leaderboard.py  plot_settings.py  task.py  testing.py
latticearena/: __init__.py  leaderboard.py  task.py  testing.py
scripts/: build_leaderboard_page.py  run_all.py
site/: leaderboard.html
tasks/: __init__.py
tasks/gsfit_2pt/: README.md  __init__.py  interface.py  task.py
tasks/gsfit_2pt/benchmark/: __init__.py  core.py  metrics.py  run.py
tasks/gsfit_2pt/dataset/: README.md  __init__.py  fake_data.npz  synthetic.py
tasks/gsfit_2pt/operators/: __init__.py  nn.py  nn_config.json  plain.py
tasks/gsfit_2pt/scripts/: __init__.py  fit.py  generate_fake_data.py  gsfit.py  optimize_nn.py
tasks/gsfit_2pt/submissions/: nn.py  nn_config.json  plain.py
tasks/gsfit_2pt/tests/: __init__.py  test_validation.py  test_validity.py  validation.py
tasks/pion_2pt/: README.md  __init__.py  dirac.py  interface.py  task.py
tasks/pion_2pt/benchmark/: __init__.py  metrics.py  plots.py  run.py
tasks/pion_2pt/dataset/: README.md
tasks/pion_2pt/operators/: __init__.py  plain.py
tasks/pion_2pt/scripts/: __init__.py  measure.py
tasks/pion_2pt/submissions/: __init__.py  axial_smeared.py  plain.py  temporal_axial.py
tasks/pion_2pt/tests/: __init__.py  validation.py  (+2 more)
tasks/two_pt_gsfit/: README.md  __init__.py  interface.py  task.py
tasks/wilson_loop/: README.md  __init__.py  interface.py  task.py  validation.py
(+30 files in other folders)
