[project]
name = "latticearena"
version = "0.1.0"
description = "A multi-task benchmark for lattice QCD operator optimization"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "scipy",
    "gvar",
    "lsqfit",
    "gmpy2",
    "pyquda",
    "pyquda-utils",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
viz = ["matplotlib"]
gpu-cuda12 = ["cupy-cuda12x"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "tasks*"]

[tool.pytest.ini_options]
testpaths = ["tasks/*/tests"]

[tool.coverage.run]
source = ["core", "tasks"]
omit = ["tasks/*/dataset/*", "tasks/*/scripts/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
